# flighty-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-23-animator-route.md  2026-06-23-flighty-mcp-readonly.md
docs/superpowers/specs/: 2026-06-23-animator-route-design.md  2026-06-23-flighty-mcp-readonly-design.md
flighty_mcp/: __init__.py  __main__.py  animator.py  db.py  errors.py  filters.py  flights.py  schema.py  server.py  stats.py  trips.py
tests/: conftest.py  test_animator.py  test_db.py  test_flights.py  test_owner_legs.py  test_schema.py  test_schema_drift.py  test_server.py  test_shorten.py  test_smoke.py  test_stats.py  test_trips_find.py  test_trips_plan.py  test_trips_resolve.py  trip_helpers.py
tests/fixtures/: build_fixture.py
