[project]
name = "flighty-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing local Flighty flight data as geo-ready legs"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["mcp[cli]>=1.6.0"]

[project.scripts]
flighty-mcp = "flighty_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flighty_mcp"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
